fix : home page on mobile

--- a/src/pages/Shop/cart.css
+++ b/src/pages/Shop/cart.css
@@ -9,9 +9,12 @@
 }
 
 .cart-wrapper {
+  padding: 0;
+  margin: 0;
   background-color: white;
   color: black;
-  width: 100vw;
+
+  max-width: 100vw;
 }
 
 .Cart {
