--- a/src/pages/Shop/shop.css
+++ b/src/pages/Shop/shop.css
@@ -148,9 +148,10 @@ footer {
   padding: 1rem 2rem;
   background-color: var(--primary-color);
   position: fixed;
-  width: 100%;
+
   top: 0;
   z-index: 1000;
+  width: 100vw;
 }
 
 .nav-menu {
